# alinc

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
scripts/: experiment_cluster.py  experiment_pattern.py  full_training.py  train.py  train_al.py
scripts/configs/: active_learning.yaml  full_training.yaml
scripts/configs/al/: age.yaml  anrmab.yaml  badge.yaml  coreset.yaml  degree.yaml  entropy.yaml  graph_density.yaml  margin.yaml  node_density.yaml  random.yaml  typiclust.yaml
scripts/configs/dataset/: cluster.yaml  coco-sp.yaml  pascalvoc-sp.yaml  pattern.yaml  zaretzki.yaml
scripts/configs/model/: gat_100k.yaml  gat_500k.yaml  gat_SBM_100k.yaml  gat_SBM_500k.yaml  gat_SP_500k.yaml  gat_cluster_100k.yaml  gatedgcnPE_CLUSTER_500k.yaml  gatedgcnPE_PATTERN_500k.yaml  gatedgcnPE_SBM_500k.yaml  gatedgcn_500k.yaml  gatedgcn_CLUSTER_500k.yaml  gatedgcn_PATTERN_500k.yaml  gatedgcn_SBM_100k.yaml  gatedgcn_SBM_500k.yaml  gatedgcn_SOM_500k.yaml  gatedgcn_SP_500k.yaml  gatedgcn_cluster_100k.yaml  gatv2_SOM_500k.yaml  gcn_SBM_100k.yaml  gcn_SBM_500k.yaml  gcn_SP_500k.yaml  gcn_cluster_100k.yaml  gcn_pattern_500k.yaml  gine_SOM_500k.yaml  gps_CLUSTER_500k.yaml  gps_COCO_500k_toenshoff.yaml  gps_PATTERN_500k.yaml  gps_SP_500k.yaml  gps_VOCSP_500k_toenshoff.yaml
scripts/output/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/alinc/: callbacks.py  constants.py  datasets.py  evaluators.py  models.py  path.py  skeleton.py  utils.py
src/alinc/custom_datasets/: __init__.py  zaretzki.py
src/alinc/encoders/: __init__.py  laplace_pos_encoder.py
src/alinc/layers/: __init__.py  gatedgcn_layer.py  gps_layer.py
src/alinc/transforms/: __init__.py  centrality.py  eigendec.py  voc_norm.py
src/dal_toolbox_graph/: LICENSE-DAL-TOOLBOX.txt  NOTICE.md  graph_data.py  utils.py
src/dal_toolbox_graph/strategies/: __init__.py  age.py  anrmab.py  badge.py  centrality.py  coreset.py  density.py  typiclust.py  uncertainty.py
tests/: conftest.py  test_callbacks.py  test_dal_toolbox_graph_data.py  test_dal_toolbox_graph_strategies.py  test_evaluators.py  test_models_and_utils.py  test_skeleton.py  test_transforms.py  test_zaretzki_dataset.py
